decafcomp/llvm/xkcd/bitshift_small.llvm.bc.err
/opt/local/libexec/llvm-3.8/bin/llvm-as: llvm/xkcd/bitshift_small.llvm:37:7: error: value doesn't match function result type 'i1'
  ret i32 0
      ^
